[package]
name = "tower-abci"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@penumbra.zone>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint-proto = { git = "https://github.com/penumbra-zone/tendermint-rs.git", branch = "abci-domain-types_r14" }
tendermint = { git = "https://github.com/penumbra-zone/tendermint-rs.git", branch = "abci-domain-types_r14" }
# tendermint-proto = { path = "../tendermint-rs/proto" }
# tendermint = { path = "../tendermint-rs/tendermint" }
bytes = "1"
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["full"]}
pin-project = "1"
futures = "0.3"
tracing = "0.1"
prost = "0.9"
tracing-tower = { git = "https://github.com/tokio-rs/tracing/", rev = "6cc6c47354ceeb47da7c95faa41c6d29b71b5f37" }

[dev-dependencies]
structopt = "0.3"
tracing-subscriber = "0.2"

[features]
doc = []

[patch.crates-io]
tracing = { git = "https://github.com/tokio-rs/tracing/", rev = "6cc6c47354ceeb47da7c95faa41c6d29b71b5f37" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing/", rev = "6cc6c47354ceeb47da7c95faa41c6d29b71b5f37" }
