[package]
name = "tower-abci"
version = "0.12.0"
authors = ["Henry de Valence <hdevalence@penumbra.zone>"]
edition = "2021"
license = "MIT"
description = "A `tower`-based interface to Tendermint's ABCI"
repository = "https://github.com/penumbra-zone/tower-abci"
homepage = "https://github.com/penumbra-zone/tower-abci"
documentation = "https://docs.rs/tower-abci"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint-proto = "0.35"
tendermint = "0.35"
bytes = "1"
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["full"]}
pin-project = "1"
futures = "0.3"
tracing = "0.1"
prost = "0.12"

[dev-dependencies]
structopt = "0.3"
tracing-subscriber = "0.3.17"

[features]
doc = []

